[tool.poetry]
name = "e2e-project"
version = "0.1.0"
description = ""
authors = ["Dmitrii Nikitin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
